administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -986,7 +986,7 @@ ul.user-roles li.active {
      background-size: 70%;
 }
 
-div.field-value-module.inline.icon {
+div.field-value-module.inline.icon, div.field-value-module.inline.checkbox {
     width: 30px;
 }
 
