administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -29,7 +29,11 @@ $highlightBtnColor:#cd0101; /*#ff0258;*/
     margin-top:30px;
     display: block;
 }
-
+[data-view="departmentDetailView"]{
+    .project-list-filters.section-indent {
+        display:none;
+    }
+}
 
 /**/
 
