administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -9,6 +9,9 @@ $highlightBtnColor:#cd0101; /*#ff0258;*/
     width: 100%;
 }
 
+.pb-c.gct3 .template-footer {
+    z-index: 1;
+}
 
 
 /*communities access*/
