--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1062,32 +1062,7 @@ button.primary-btn.nav-new-btn.view-selection:before{
 }
 
 
-.section-welcome {
 
-    
-    button.inline-edit:after {
-        content: "\f040";
-        font-family: 'FontAwesome';
-        font-size:20px;
-    }
-    
-    
-    button.inline-edit {
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        width: 40px;
-        height: 40px;
-        border: none;
-        border-radius: 100%;
-        font-size: 0;
-        padding: 0;
-        color: mediumseagreen;
-        cursor:pointer;
-    }
-
-
-}
 
 .section-welcome button.inline-edit, button.inline-edit{
    
@@ -1116,6 +1091,10 @@ button.primary-btn.nav-new-btn.view-selection:before{
     position: absolute;
     top: 20px;
     right: 20px;
+}
+
+.dataset-item button.form-btn.inline-edit {
+    float: right;
 }
 
 
