administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1095,6 +1095,8 @@ button.primary-btn.nav-new-btn.view-selection:before{
 
 .dataset-item button.form-btn.inline-edit {
     float: right;
+    color: #c8c8c8;
+    background-color: #f7f7f7;
 }
 
 
