administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -1,3 +1,6 @@
-.ui-view.left-panel {
-    background-color: $color1;
+
+$themeName{
+    .ui-view.left-panel {
+        background-color: $color1;
+    }
 }
