administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1935,6 +1935,12 @@ button.primary-btn, .WizardButton, .WizardTitle li, .t-btn {}
     margin-right: 3%;
     vertical-align: top;
 }
+.width-2-3rd {
+    width: 60%;
+    display: inline-block;
+    margin-right: 3%;
+    vertical-align: top;
+}
 .width-3 {
     width: 30%;
     display: inline-block;
