--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3652,6 +3652,10 @@ span.navigation-menu.settings-menu {
 
 
 
+.uitext-container.readonly .text-input {
+    background-color: #202538;
+    color: orange;
+}
 
 
 
