--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1185,3 +1185,8 @@ div.field-value-module.inline.icon, div.field-value-module.inline.check {
 }
 
 
+.uitext-container.readonly .text-input {
+    background-color: #202538;
+    color: orange;
+}
+
