administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -1,6 +1,11 @@
 
 .#{$themeName}{
+    
+    .ui-view.dashboard-main{
+        color:$mainFontColor;
+    }
+    
     .ui-view.left-panel {
-        background-color: $color1;
+        background-color: $mainColorSidePanel;
     }
 }
