administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -2,10 +2,11 @@
 .#{$themeName}{
     
     .ui-view.dashboard-main{
-        color:$mainFontColor;
+        color:$mainFontContentColor;
     }
     
     .ui-view.left-panel {
         background-color: $mainColorSidePanel;
+        color:$mainFontSidePanelColor;
     }
 }
