administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -3,6 +3,7 @@
     
     .ui-view.dashboard-main{
         color:$mainFontContentColor;
+        background-color:$mainColorContent;
     }
     
     .ui-view.left-panel {
