--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -10,4 +10,9 @@
         background-color: $mainColorSidePanel;
         color:$mainFontSidePanelColor;
     }
+    
+    .section-module, .ui-list-view .ui-view.section-module{
+        background-color: $contentInsetColor;
+    }
+    
 }
