administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -19,4 +19,8 @@
         background-color:$mainHighlightColor;
     }
     
+    button.primary-btn.nav-new-btn.btn-index-1{
+         background-color:$altHighlightColor;
+    }
+    
 }
