--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -3467,7 +3467,7 @@ img.static-map {
 
 .search-panel span.search-bar-btn.left.search {
     left: 0;
-    background-color: white;
+    background-color: transparent;
     border-right-width: 0;
     box-shadow: none;
     border-color: gray;
