administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -6,7 +6,7 @@
         background-color:$mainColorContent;
     }
     
-    .ui-view.left-panel {
+    [data-view="leftPanel"].ui-view.left-panel {
         background-color: $mainColorSidePanel;
         color:$mainFontSidePanelColor;
     }
