administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1190,3 +1190,9 @@ div.field-value-module.inline.icon, div.field-value-module.inline.check {
     color: orange;
 }
 
+.left-panel .alt-logo.big {
+    height: 250px;
+    width: 85%;
+    background-size: 85%;
+}
+
