administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -1196,3 +1196,7 @@ div.field-value-module.inline.icon, div.field-value-module.inline.check {
     background-size: 85%;
 }
 
+.ui-view.user-item.section-module.this-is-me {
+    background-color: #cde6cd;
+}
+
