--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -5,6 +5,7 @@ $darkThemeBG:#030310;
 $darkThemeInset:#030310;
 $tagBtnColor:#2E303A;
 $fontColor:#e0e0e2;
+$darkThemeModalBG:#484848;
 
 
 $mainStyleColor:#efa82c;
@@ -95,7 +96,7 @@ $mainStyleColor:#efa82c;
     }
 
     &.pb-c.pb-c-append {
-        background-color:#484848;
+        background-color:$darkThemeModalBG;
         color:$fontColor;
     }
 
@@ -202,6 +203,12 @@ $mainStyleColor:#efa82c;
     .ui-view.active-project {
         background-color: transparent;
     }
+}
+
+.pb-w .template-footer {
+ 
+    background-color: #3f3f3f;
+
 }
 
 [data-view="tasksOverviewListDetail"] {
