--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -7,16 +7,51 @@ $highlightBtnColor:#efa82c;
     background-color: #222222;
 }
 
+[data-view="mainProjectsDetail"] .project-list-filters {
+    display: none;
+}
+
+.media-item {
+    width: 60px;
+    height: 60px;
+    display: inline-block;
+}
+
+.media-item>.image,  .media-item>.document,  .media-item>.audio,  .media-item>.video{
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    
+}
+
+.tabs.droppable-hide {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+
+textarea.text-input {
+    padding-left: 10px;
+    border-radius: 5px;
+}
+
+textarea.text-input.one.with-1-line {
+   
+    overflow: hidden;
+    padding: 0px;
+    height: 35px;
+    line-height: 35px;
+    padding-left: 10px;
+}
+
+
 
 .project-list-btns {
     display: inline-block;
     width: 100%;
 }
 
-.project-list-filters.section-indent {
-    display: inline-block;
-    width: 100%;
-}
 
 div.field-value-module.inline.icon, div.field-value-module.inline.check {
     width: 30px;
