--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -539,12 +539,20 @@ ul.project, ul.user{
     margin-right: 0;
 }
 
-.ui-view.search-panel {
+.search-panel {
+
+span.notifications:after {
+     
+    color: $highlightBtnColor;
+}
+
+
+    &.ui-view{
     background: white;
     text-align: right;
 }
 
-.search-panel input.search-input {
+ input.search-input {
     border-radius: 25px;
     background-color: #f7f7f7;
     border-color: rgba(0,0,0,0.1);
@@ -552,21 +560,23 @@ ul.project, ul.user{
     width:250px;
 }
 
-.search-panel input.search-input:focus, .search-panel input.search-input.focus {
+input.search-input:focus,  input.search-input.focus {
     width: 400px;
     outline: none;
     box-shadow: 0 0 4px rgba(0,0,0,0.3) inset;
     border-color: #c6c6c6;
 }
 
-  .search-panel .search-container{
+  .search-container{
     position:relative;
   }
 
-  .search-panel .search-result-list{
+  .search-result-list{
     margin-top:0;
     margin-left:1px;
   }
+  
+}
 
 .dataset-description {
     font-size: 12px;
