administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/darkTheme.customCSS.css
+++ b/app/darkTheme.customCSS.css
@@ -178,9 +178,21 @@ $mainStyleColor:#efa82c;
     }
 
 
-
+    .search-panel{
         
-
+        input.search-input {
+            background: $tagBtnColor;
+            color: white;
+            border-color: #433400;
+        }
+    
+        input.search-input::placeholder {
+            color: #ceb250;
+            font-style:italic;
+            font-weight:100;
+        }
+        
+    }
 
 
 }
