--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -19,7 +19,26 @@ $highlightBtnColor:#cd0101; /*#ff0258;*/
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    position:relative;
+    margin:5px;
+    
+    &:after {
+        content: "";
+        width: calc( 100% + 10px );
+        height: calc( 100% + 10px );
+        position: absolute;
+        top: -5px;
+        left: -5px;
+        background-color: rgba(0,0,0,0.2);
+        border: 1px dashed rgba(255,255,255,0.2);
+        border-radius: 7px;
+        
+    }
 }
+
+    
+
+
 }
 
 
