administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -3,6 +3,11 @@
 
 $highlightBtnColor:#efa82c;
 
+
+button.primary-btn.nav-new-btn{
+    background-color:$highlightBtnColor;
+}
+
 [data-view="leftPanel"] {
     background-color: #222222;
 }
