administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -373,6 +373,12 @@ button.inline-btn.add, button.primary-btn {
     margin-right: 12px;
 }
 
+
+.search-panel .ui-view.user-detail {
+    display: none;
+}
+
+
 [data-view="projectsOverviewDetail"]{
     display:block;
     margin-bottom:50px;
