--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -15,6 +15,11 @@ body.body-overlayed>#viewControllerApp>div>div>.ui-view {
 button:focus {outline:0;}
 
 
+.navigation-menu ul.menu-links>label {
+    visibility: hidden;
+    margin-top: 30px;
+}
+
 button.primary-btn.nav-new-btn{
 
     
