administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/gatherTheme.customCSS.css
+++ b/app/gatherTheme.customCSS.css
@@ -13,6 +13,13 @@ button.primary-btn.nav-new-btn{
  button.primary-btn.nav-new-btn:hover {
     background-color: $highlightBtnHoverColor; /* */
  }
+ 
+ .left-panel .user-detail .single_ImageContainer:hover:after {
+    box-shadow: 0 0 10px rgba(255,255,255,0.3);
+    border-color: #efa82c;
+    cursor:pointer
+}
+
 
 [data-view="leftPanel"] {
     background-color: #222222;
