administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/fontAwesomeIcons.customCSS.css
+++ b/app/fontAwesomeIcons.customCSS.css
@@ -130,7 +130,7 @@
         color:crimson;
     }
     button.download-btn:after{
-        content: "\f0ed";
+        content: "\f019";
     }
     button.edit-btn:after{
         content: "\f044";
