--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -10,6 +10,14 @@ $highlightBtnColor:#cd0101; /*#ff0258;*/
 }
 
 
+.tileOptionContainer.spatial-file-tile.add>.tileButton {
+    background-color: $highlightBtnColor;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    position: relative;
+    top: 8px;
+}
 
 .uitext-container {
 
