administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -23,4 +23,8 @@
          background-color:$altHighlightColor;
     }
     
+    .search-panel.ui-view {
+        background-color:$topBarColorContent;
+    }
+    
 }
