administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -27,4 +27,8 @@
         background-color:$topBarColorContent;
     }
     
+    .dataset-item button.form-btn.inline-edit, .table-header .field-value-module.inline.sortable{
+        background-color:$genericButtonColorContent;
+    }
+    
 }
