administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -31,4 +31,8 @@
         background-color:$genericButtonColorContent;
     }
     
+    .section-title {
+        color: $mainFontHeadingColor;
+    }
+    
 }
