administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -4,6 +4,10 @@
     .ui-view.dashboard-main{
         color:$mainFontContentColor;
         background-color:$mainColorContent;
+        .dataset-description{
+            color:$mainFontContentColor;
+        }
+        
     }
     
     [data-view="leftPanel"].ui-view.left-panel {
