administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -4,9 +4,11 @@
     .ui-view.dashboard-main{
         color:$mainFontContentColor;
         background-color:$mainColorContent;
-        .dataset-description{
+        .dataset-description, .section-wecome > *, .section-help .hint{
             color:$mainFontContentColor;
         }
+        
+        
         
     }
     
