--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -4,7 +4,7 @@
     .ui-view.dashboard-main{
         color:$mainFontContentColor;
         background-color:$mainColorContent;
-        .dataset-description, .section-welcome .hint{
+        .dataset-description, .section-welcome .section-title>*{
             color:$mainFontContentColor;
         }
         
