administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -1,7 +1,7 @@
 
 .#{$themeName}{
     
-    .ui-view.dashboard-main{
+    .ui-view.dashboard-main, .ui-view.inset-menu-shading > div{
         color:$mainFontContentColor;
         background-color:$mainColorContent;
         .dataset-description, .section-welcome span{
