administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/User Theme.customCSS.css
+++ b/app/User Theme.customCSS.css
@@ -37,7 +37,7 @@
         background-color:$genericButtonColorContent;
     }
     
-    .section-title {
+    .section-title, .tag-item span.field-label {
         color: $mainFontHeadingColor;
     }
     
