--- a/app/gct3Theme.customCSS.css
+++ b/app/gct3Theme.customCSS.css
@@ -610,7 +610,7 @@ ul.project, ul.user{
     overflow: hidden;
 }
 
-.dataset-item .field-value-module.item-icon {
+.dataset-item .field-value-module.item-icon, .dataset-item .field-value-module.item-icon>.field-label {
     width: 50px;
     height: 50px;
     float: right;
