--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -110,7 +110,11 @@ button.primary-btn.nav-new-btn{
 
 
 
-
+label.boolean-field {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+}
 
 
 div#g-recaptcha {
