--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -15,6 +15,15 @@ body.body-overlayed>#viewControllerApp>div>div>.ui-view {
 button:focus {outline:0;}
 
 
+.bubble.layer-loading {
+    height: 65px;
+}
+
+.bubble.layer-loading .sp {
+    margin-top: 15px;
+}
+
+
 .navigation-menu ul.menu-links>label {
     visibility: hidden;
     margin-top: 30px;
