--- a/app/Default Dashboard Theme.customCSS.css
+++ b/app/Default Dashboard Theme.customCSS.css
@@ -1749,11 +1749,11 @@ ul.item-tags li {
     display: inline-block;
     right: 4px;
     top: 6px;
-    background-image: url("https://wabun.geolive.ca/administrator/components/com_geolive/library/pushbox/ic_clear_black_18dp.png?tint=rgb(255,0,0)");
+    background-image: url(<?php echo UrlFrom("{scripts}/pushbox/ic_clear_black_18dp.png?tint=rgb(255,0,0)"); ?>);
     background-size: 100%;
 }
 .hasOrder>span.reset-sort{
-    background-image: url(<?php echo UrlFrom("{assets}/Control Panel Icons/reset.png")?>);
+    background-image: url(<?php echo UrlFrom("{assets}/Control Panel Icons/reset.png"); ?>);
 }
 
 .inline-btn.filter {
@@ -2708,7 +2708,7 @@ span.remove-btn {
     background: white;
     border-radius: 100%;
     z-index: 1;
-    background-image: url(https://wabun.geolive.ca/administrator/components/com_geolive/library/pushbox/ic_clear_black_18dp.png);
+    background-image: url(<?php echo UrlFrom("{scripts}/pushbox/ic_clear_black_18dp.png); ?>);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 75%;
